# Notkia-ui

./: .gitignore  .gitmodules  CMakeList.txt  CMakeLists.txt  config.h  lv_drv_conf.h  main.c  readme.md
.github/workflows/: cmake.yml
hal/: notkiav2.c  notkiav2.h  simulator.c  simulator.h
screens/: boot.c  boot.h  main.c  main.h
software/games/: snake.c  snake.h
styles/: main_screen_style.c  main_screen_style.h
